New files added - [CXGlobalSettings.variables.json,CXGlobalSettings.js,GlobalSettingsServiceImpl.java,GlobalSettingsService.java,GlobalSettingsController.java,CXGlobalSettings.html,CXGlobalSettings.css,GlobalSettings.java,GlobalSettingsDao.java,CXGlobalSettings] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,MunicipalityGroupsController.java,FormStatuses.java,MunicipalitiesController.java,app.variables.json,FormTypesService.java,UsersController.java,CXAdmin.html,MunicipalityGroupsServiceImpl.java,FormStatusesController.java,servicedef.xml,DataEntry.variables.json,Municipalities.java,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,pages-config.json,FormTypesServiceImpl.java,Vendor.java,States.java,MunicipalityGroups.java,DataEntry.html,FormTypesController.java,FormTypes.java,StatesServiceImpl.java,MunicipalityGroupsService.java,UsersService.java,Users.java,StatesController.java,FormStatusesService.java,StatesService.java,UsersServiceImpl.java,MunicipalitiesService.java,DataEntry.js,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormFee", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "MCNewElectricConnection", "MCNewResidentialStructure", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "PUDApplication", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "MasterForms", "TABLE291" ],
+  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormFee", "FormStatuses", "FormTypes", "GISRecords", "Holidays", "ManualFeeTypes", "MCNewElectricConnection", "MCNewResidentialStructure", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "PUDApplication", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "MasterForms", "TABLE291", "GlobalSettings" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
