--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -97,6 +97,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_CXGlobalSettings" : {
+    "_id" : "wm-goToPage_CXGlobalSettings-wm.NavigationVariable-1481624413329",
+    "name" : "goToPage_CXGlobalSettings",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CXGlobalSettings",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_DataEntry" : {
     "_id" : "wm-goToPage_DataEntry-wm.NavigationVariable-1478537977414",
     "name" : "goToPage_DataEntry",
