New files added - [] Files modified - [ManageForms.js,ManageForms.html,Cx2QueryExecutorServiceImpl.java,ManageForms.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,DataEntry.html,cx2_query.json,Cx2QueryExecutorService.java,DataEntry.variables.json,DataEntry.js,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -145,7 +145,7 @@
     "dataSet" : [ {
       "type" : "integer",
       "target" : "FormTypeId",
-      "value" : "bind:Widgets.gridFormtypes.selecteditem.id"
+      "value" : "bind:Widgets.gridFormTypes.selecteditem.ID | toNumber"
     } ],
     "pageTransitions" : "none"
   },
