New files added - [] Files modified - [MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,MunicipalityUsers.html,cx2-queries.hbm.xml,QueryExecutionController.java,MunicipalityUsers.js,servicedef.xml,MunicipalityUsers.css,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -565,6 +565,34 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "successfully" : {
+    "_id" : "wm-successfully-wm.NotificationVariable-1481869693445",
+    "name" : "successfully",
+    "owner" : "App",
+    "category" : "wm.NotificationVariable",
+    "dataBinding" : [ {
+      "target" : "content",
+      "value" : "inline",
+      "type" : "list"
+    }, {
+      "target" : "text",
+      "value" : "Record Added successfully",
+      "type" : "string"
+    }, {
+      "target" : "duration",
+      "value" : "5000",
+      "type" : "list"
+    }, {
+      "target" : "class",
+      "value" : "Success",
+      "type" : "list"
+    }, {
+      "target" : "toasterPosition",
+      "value" : "bottom right",
+      "type" : "list"
+    } ],
+    "operation" : "toast"
+  },
   "supportedLocale" : {
     "_id" : "wm-wm.Variable1402640443182",
     "name" : "supportedLocale",
