New files added - [] Files modified - [CXGlobalSettings.variables.json,CXGlobalSettings.js,EditForm.html,CXGlobalSettings.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -52,7 +52,7 @@
       "tableType" : "TABLE",
       "primaryFields" : [ "id" ]
     },
-    "bindCount" : 2,
+    "bindCount" : 3,
     "tableName" : "States",
     "tableType" : "TABLE",
     "properties" : [ ],
@@ -269,6 +269,7 @@
     },
     "isDefault" : true,
     "bindCount" : 1,
+    "spinnerContext" : "page",
     "tableName" : "GlobalSettings",
     "tableType" : "TABLE",
     "properties" : [ "states" ],
@@ -486,7 +487,7 @@
       "tableType" : "TABLE",
       "primaryFields" : [ "id" ]
     },
-    "bindCount" : 3,
+    "bindCount" : 5,
     "tableName" : "GlobalSettings",
     "tableType" : "TABLE",
     "properties" : [ "states" ],
