New files added - [] Files modified - [pages-config.json,EditForm.html,EditForm.variables.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -146,6 +146,10 @@
       "type" : "integer",
       "target" : "FormTypeId",
       "value" : "bind:Widgets.gridFormTypes.selecteditem.ID | toNumber"
+    }, {
+      "type" : "integer",
+      "target" : "MunicipalityId",
+      "value" : "bind:Widgets.selectMunicipality.datavalue.ID | toNumber"
     } ],
     "pageTransitions" : "none"
   },
