--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -40,6 +40,9 @@
   "params" : [ {
     "name" : "FormTypeId",
     "type" : "integer"
+  }, {
+    "name" : "MunicipalityId",
+    "type" : "integer"
   } ]
 }, {
   "name" : "ForgotPassword",
