New files added - [VendorLicenses.java,VendorLicenseTypesService.java,VendorLicensesService.java,VendorLicenseTypesServiceImpl.java,VendorLicenseTypes.java,VendorLicenseTypesController.java,VendorLicenseTypesDao.java,VendorLicensesController.java,VendorLicensesDao.java,VendorLicensesServiceImpl.java] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,FormTypesServiceImpl.java,Vendor.java,VendorService.java,FormTypesController.java,VendorController.java,MunicipalityGroupsServiceImpl.java,StatesServiceImpl.java,servicedef.xml,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -11,7 +11,7 @@
   "dbName" : "cx2",
   "port" : "1433",
   "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormFee", "FormStatuses", "FormTypes", "GISRecords", "GlobalSettings", "Holidays", "ManualFeeTypes", "MasterForms", "MCNewElectricConnection", "MCNewResidentialStructure", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "PUDApplication", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers" ],
+  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormFee", "FormStatuses", "FormTypes", "GISRecords", "GlobalSettings", "Holidays", "ManualFeeTypes", "MasterForms", "MCNewElectricConnection", "MCNewResidentialStructure", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "PUDApplication", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "VendorLicenses", "VendorLicenseTypes" ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
