Changes in VendorLicense and auto-populating vendor New files added - [securityService.properties,deployment.properties] Files modified - [FormCategoryMappingController.java,VendorUsersController.java,CXGlobalSettings.variables.json,HolidaysController.java,ManageGISData.variables.json,ManualFeeTypesController.java,VendorLicenseTypesController.java,McnewElectricConnectionController.java,MunicipalityUsers.variables.json,UsersController.java,general-options.json,project-security.xml,.wmproject.properties,VendorApplication.variables.json,ManualFeeTypes.variables.json,SFNewResidentialStructure.variables.json,DataEntry.variables.json,SFNewElectricConnection.variables.json,PudapplicationController.java,.gitignore,ManageMunicipalityVendors.variables.json,en.json,SfnewElectricConnectionController.java,EditForm.variables.json,FormTypesController.java,SubdivisionsController.java,MunicipalitySettings.variables.json,VendorController.java,VendorApprovalsController.java,MunicipalityGroupMembersController.java,UserSubscriptionsController.java,web.xml,StatesController.java,DevFormDataEntry.variables.json,GisrecordsController.java,ManageUsers.variables.json,ContractorTypesController.java,CompanyUsers.variables.json,UserPasswordResetTokensController.java,RolesController.java,MunicipalityGroupsController.java,McnewResidentialStructureController.java,GlobalSettingsController.java,MunicipalitiesController.java,.wmproject.properties,FormFeeController.java,SfnewResidentialStructureController.java,NewForm.variables.json,ManageForms.variables.json,FormStatusesController.java,ManageSubscriptions.variables.json,MasterFormsController.java,MCNewElectricConnection.variables.json,CompanyMunicipalities.variables.json,MyProfile.variables.json,WorkSchedule.variables.json,ManageMunicipalities.variables.json,PUDApplication.variables.json,VendorAdminsController.java,Main.variables.json,ManageMuncipalityGroups.variables.json,FormCategoriesController.java,UserCreation.variables.json,VendorLicensesControll

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ services/*/src/servicedefs/*-service-definitions.json
 *_vk.hbm.xml
 !src/main/webapp/WEB-INF/data/*.log
 src/main/webapp/pages/*/page.min.html
+src/main/webapp/WEB-INF/context.xml
+dataObjects.json
