--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -1,28 +1,1 @@
-{
-  "username" : "cx2",
-  "password" : "7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158",
-  "url" : "jdbc:sqlserver://64.87.23.26:1433;databaseName=cx2",
-  "driverClass" : "com.microsoft.sqlserver.jdbc.SQLServerDriver",
-  "dialect" : "com.wavemaker.runtime.data.dialect.WMSQLServerDialect",
-  "serviceId" : "cx2",
-  "packageName" : "com.civicxpress.cx2",
-  "dbType" : "SQLServer",
-  "host" : "64.87.23.26",
-  "dbName" : "cx2",
-  "port" : "1433",
-  "schemaName" : "cx2",
-  "tableFilter" : [ "ContractorTypes", "FormCategories", "FormCategoryMapping", "FormFee", "FormStatuses", "FormTypes", "GISRecords", "GlobalSettings", "Holidays", "ManualFeeTypes", "MasterForms", "MCNewElectricConnection", "MCNewResidentialStructure", "Municipalities", "MunicipalityGroupMembers", "MunicipalityGroups", "PUDApplication", "Roles", "SFNewElectricConnection", "SFNewResidentialStructure", "States", "Subdivisions", "UserPasswordResetTokens", "Users", "UserSubscriptions", "Vendor", "VendorAdmins", "VendorApprovals", "VendorUsers", "VendorLicenses", "VendorLicenseTypes" ],
-  "schemaFilter" : [ ],
-  "impersonateUser" : false,
-  "activeDirectoryDomain" : null,
-  "hbm2ddl" : "none",
-  "maxPageSize" : 100,
-  "dataSourceType" : "WM_MANAGED_DATASOURCE",
-  "jndiName" : "",
-  "reloadInfo" : {
-    "reload" : false,
-    "reason" : null,
-    "message" : null
-  },
-  "readOnly" : false
-}
+{"username":"cx2","password":"7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158","url":"jdbc:sqlserver://64.87.23.26:1433;databaseName=cx2","driverClass":"com.microsoft.sqlserver.jdbc.SQLServerDriver","dialect":"com.wavemaker.runtime.data.dialect.WMSQLServerDialect","serviceId":"cx2","packageName":"com.civicxpress.cx2","dbType":"SQLServer","host":"64.87.23.26","dbName":"cx2","port":"1433","schemaName":"cx2","tableFilter":[{"table":"ContractorTypes","schema":"cx2"},{"table":"FormCategories","schema":"cx2"},{"table":"FormCategoryMapping","schema":"cx2"},{"table":"FormFee","schema":"cx2"},{"table":"FormStatuses","schema":"cx2"},{"table":"FormTypes","schema":"cx2"},{"table":"GISRecords","schema":"cx2"},{"table":"GlobalSettings","schema":"cx2"},{"table":"Holidays","schema":"cx2"},{"table":"ManualFeeTypes","schema":"cx2"},{"table":"MasterForms","schema":"cx2"},{"table":"MCNewElectricConnection","schema":"cx2"},{"table":"MCNewResidentialStructure","schema":"cx2"},{"table":"Municipalities","schema":"cx2"},{"table":"MunicipalityGroupMembers","schema":"cx2"},{"table":"MunicipalityGroups","schema":"cx2"},{"table":"PUDApplication","schema":"cx2"},{"table":"Roles","schema":"cx2"},{"table":"SFNewElectricConnection","schema":"cx2"},{"table":"SFNewResidentialStructure","schema":"cx2"},{"table":"States","schema":"cx2"},{"table":"Subdivisions","schema":"cx2"},{"table":"UserPasswordResetTokens","schema":"cx2"},{"table":"Users","schema":"cx2"},{"table":"UserSubscriptions","schema":"cx2"},{"table":"Vendor","schema":"cx2"},{"table":"VendorAdmins","schema":"cx2"},{"table":"VendorApprovals","schema":"cx2"},{"table":"VendorUsers","schema":"cx2"},{"table":"VendorLicenses","schema":"cx2"},{"table":"VendorLicenseTypes","schema":"cx2"}],"schemaFilter":[],"impersonateUser":false,"activeDirectoryDomain":null,"hbm2ddl":"none","maxPageSize":100,"dataSourceType":"WM_MANAGED_DATASOURCE","jndiName":"","reloadInfo":{"reload":false,"reason":null,"message":null},"readOnly":false}
