--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -44,7 +44,7 @@
     "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -109,7 +109,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -543,7 +543,7 @@
     "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
