--- a/src/main/webapp/pages/PUDApplication/PUDApplication.variables.json
+++ b/src/main/webapp/pages/PUDApplication/PUDApplication.variables.json
@@ -21,7 +21,7 @@
     "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -951,7 +951,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -1562,7 +1562,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -2173,7 +2173,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
