--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -111,7 +111,7 @@
     "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
