--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,6 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
-                <directory>services/cx2/src</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
-                <directory>services/securityService/src</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
                 <directory>services/CXPasswordResetService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -42,6 +28,20 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/UpdateRecordStatus/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/cx2/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -114,9 +114,12 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>services/cx2/src</source>
+                            
+                                <source>services/CXPasswordResetService/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
+                                <source>services/cx2/src</source>
+                                <source>services/securityService/src</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -215,6 +218,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
@@ -228,9 +241,9 @@
             </properties>
         </profile>
         <profile>
-            <id>production</id>
+            <id>deployment</id>
             <properties>
-                <profile.props.file>production.properties</profile.props.file>
+                <profile.props.file>deployment.properties</profile.props.file>
             </properties>
         </profile>
         <profile>
@@ -341,7 +354,7 @@
     <properties>
         <profile.props.file>development.properties</profile.props.file>
         <spring.version>4.2.0.RELEASE</spring.version>
-        <spring.security.version>3.2.3.RELEASE</spring.security.version>
-        <wavemaker.studio.version>8.3.3</wavemaker.studio.version>
+        <spring.security.version>4.1.2.RELEASE</spring.security.version>
+        <wavemaker.studio.version>8.4.0</wavemaker.studio.version>
     </properties>
 </project>
