--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -6,3 +6,11 @@ db.cx2.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
 db.cx2.schemaName=cx2
 db.cx2.url=jdbc:sqlserver://64.87.23.26:1433;databaseName=cx2
 db.cx2.username=cx2
+security.enabled=true
+security.general.rememberMe.enabled=true
+security.general.rememberMe.timeOut=1296000
+security.general.session.timeout=30
+security.general.ssl.enabled=false
+security.general.ssl.port=443
+security.general.xsrf.enabled=false
+security.general.xss.enabled=false
