--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
@@ -90,17 +90,18 @@
         <url-pattern>/prefabs/*</url-pattern>
     </servlet-mapping>
 
-    <!--
-      Loads the root application context of this web app at startup.
-      The application context is then available via 
-      WebApplicationContextUtils.getWebApplicationContext(ServletContext).
-    -->
 
+    <listener>
+        <listener-class>com.wavemaker.runtime.web.listener.LoggingInitializationListener</listener-class>
+    </listener>
     <listener>
         <listener-class>com.wavemaker.runtime.server.CleanupListener</listener-class>
     </listener>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
     </listener>
 
     <!--
