--- a/src/main/webapp/app/prefabs/Google_reCAPTCHA/.wmproject.properties
+++ b/src/main/webapp/app/prefabs/Google_reCAPTCHA/.wmproject.properties
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-<comment>Prefab Properties</comment>
+<comment>added prefab status</comment>
 <entry key="version">1.3</entry>
+<entry key="status">PUBLISHED</entry>
 <entry key="dependent-prefabs"/>
 <entry key="name">Google_reCAPTCHA</entry>
 <entry key="type">PREFAB</entry>
