--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -17,7 +17,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -82,7 +82,7 @@
     "autoUpdate" : false,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
@@ -302,7 +302,7 @@
     "autoUpdate" : true,
     "transformationRequired" : false,
     "liveSource" : "cx2",
-    "ignoreCase" : false,
+    "ignoreCase" : true,
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
