--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -337,6 +337,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ProcessForms" : {
+    "_id" : "wm-goToPage_ProcessForms-wm.NavigationVariable-1482317640483",
+    "name" : "goToPage_ProcessForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ProcessForms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ResetPassword" : {
     "_id" : "wm-goToPage_ResetPassword-wm.NavigationVariable-1479884962543",
     "name" : "goToPage_ResetPassword",
