--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -151,6 +151,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "ProcessForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ResetPassword",
   "type" : "PAGE",
   "params" : [ ]
