--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -121,7 +121,7 @@
         "columnName" : "ContractorTypeId",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : true,
@@ -140,7 +140,7 @@
           "columnName" : "ID",
           "isPrimaryKey" : true,
           "notNull" : true,
-          "length" : 255,
+          "length" : 0,
           "precision" : 10,
           "generator" : "identity",
           "isRelated" : false,
@@ -154,7 +154,7 @@
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 255,
-          "precision" : 19,
+          "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
           "defaultValue" : "",
@@ -167,7 +167,7 @@
         "columnName" : "StateId",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : true,
@@ -186,7 +186,7 @@
           "columnName" : "ID",
           "isPrimaryKey" : true,
           "notNull" : true,
-          "length" : 255,
+          "length" : 0,
           "precision" : 10,
           "generator" : "identity",
           "isRelated" : false,
@@ -200,7 +200,7 @@
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 255,
-          "precision" : 19,
+          "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
           "defaultValue" : "",
@@ -213,7 +213,7 @@
         "columnName" : "ID",
         "isPrimaryKey" : true,
         "notNull" : true,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "identity",
         "isRelated" : false,
@@ -227,7 +227,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -240,7 +240,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -253,7 +253,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -266,7 +266,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -279,7 +279,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -292,7 +292,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -305,7 +305,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -318,7 +318,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -331,7 +331,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -344,7 +344,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -357,7 +357,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -370,7 +370,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -383,7 +383,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -396,7 +396,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -408,7 +408,7 @@
         "columnName" : "NumberOfEmployees",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : false,
@@ -422,7 +422,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -434,8 +434,8 @@
         "columnName" : "COI",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 2147483647,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "scale" : 0
@@ -447,7 +447,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -459,8 +459,8 @@
         "columnName" : "InsuranceExpires",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 10,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -472,8 +472,8 @@
         "columnName" : "LastUpdated",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 10,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
