bugs fixes New files added - [FileService.spring.xml,FileController.java,FileService.java,servicedef.xml,README.md] Files modified - [project-services.xml,pom.xml,app.variables.json,MunicipalityUsers.variables.json,MyProfile.variables.json,ManageUsers.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -42,6 +42,29 @@
     "saveInPhonegap" : false,
     "controller" : "Users"
   },
+  "FileServiceUploadFile" : {
+    "_id" : "wm-FileServiceUploadFile-wm.ServiceVariable-1482387425645",
+    "name" : "FileServiceUploadFile",
+    "owner" : "App",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ ],
+    "type" : "com.civicxpress.fileservice.FileService.FileUploadResponse",
+    "service" : "FileService",
+    "operation" : "uploadFile",
+    "operationId" : "FileController_uploadFile",
+    "serviceType" : "JavaService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "isDefault" : true,
+    "controller" : "File"
+  },
   "goToPage_CompanyForms" : {
     "_id" : "wm-goToPage_CompanyForms-wm.NavigationVariable-1480417618463",
     "name" : "goToPage_CompanyForms",
