ManageFormsCount for CXAdmin And LoggedInUserId type covertion change Files modified - [QueryExecutionController.java,cx2-queries.hbm.xml,MunicipalityAdministration.variables.json,EditForm.js,CXAdmin.variables.json,app.variables.json,MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,CXAdmin.html,ManageMuncipalityGroups.variables.json,EditForm.html,MunicipalityAdministration.html,cx2_query.json,Cx2QueryExecutorService.java,servicedef.xml]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -22,7 +22,7 @@
     "category" : "wm.ServiceVariable",
     "dataBinding" : [ {
       "target" : "id",
-      "value" : "bind:Variables.loggedInUser.dataSet.id | toNumber",
+      "value" : "bind:Variables.loggedInUser.dataSet.id | stringToNumber",
       "type" : "integer"
     } ],
     "type" : "com.civicxpress.cx2.Users",
@@ -35,7 +35,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "startUpdate" : true,
+    "startUpdate" : false,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
     "transformationRequired" : false,
