--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -54,7 +54,7 @@
         "columnName" : "ID",
         "isPrimaryKey" : true,
         "notNull" : true,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "identity",
         "isRelated" : false,
@@ -68,7 +68,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -119,7 +119,7 @@
         "columnName" : "StateId",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : true,
@@ -138,7 +138,7 @@
           "columnName" : "ID",
           "isPrimaryKey" : true,
           "notNull" : true,
-          "length" : 255,
+          "length" : 0,
           "precision" : 10,
           "generator" : "identity",
           "isRelated" : false,
@@ -152,7 +152,7 @@
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 255,
-          "precision" : 19,
+          "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
           "defaultValue" : "",
@@ -165,7 +165,7 @@
         "columnName" : "ID",
         "isPrimaryKey" : true,
         "notNull" : true,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "identity",
         "isRelated" : false,
@@ -179,7 +179,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -192,7 +192,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -205,7 +205,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -218,7 +218,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -231,7 +231,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -244,7 +244,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -257,7 +257,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -270,7 +270,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -282,8 +282,8 @@
         "columnName" : "AllowManualPayment",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -295,7 +295,7 @@
         "columnName" : "ManualPaymentPercent",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : false,
@@ -308,8 +308,8 @@
         "columnName" : "Active",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -322,7 +322,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 500,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -334,8 +334,8 @@
         "columnName" : "Logo",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 2147483647,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "scale" : 0
@@ -346,8 +346,8 @@
         "columnName" : "MondayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -359,8 +359,8 @@
         "columnName" : "TuesdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -372,8 +372,8 @@
         "columnName" : "WednesdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -385,8 +385,8 @@
         "columnName" : "ThursdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -398,8 +398,8 @@
         "columnName" : "FridayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -411,8 +411,8 @@
         "columnName" : "SaturdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -424,8 +424,8 @@
         "columnName" : "SundayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -438,7 +438,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -450,8 +450,8 @@
         "columnName" : "OpenTime",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 16,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -463,8 +463,8 @@
         "columnName" : "CloseTime",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 16,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -553,7 +553,7 @@
         "columnName" : "StateId",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : true,
@@ -572,7 +572,7 @@
           "columnName" : "ID",
           "isPrimaryKey" : true,
           "notNull" : true,
-          "length" : 255,
+          "length" : 0,
           "precision" : 10,
           "generator" : "identity",
           "isRelated" : false,
@@ -586,7 +586,7 @@
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 255,
-          "precision" : 19,
+          "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
           "defaultValue" : "",
@@ -599,7 +599,7 @@
         "columnName" : "ID",
         "isPrimaryKey" : true,
         "notNull" : true,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "identity",
         "isRelated" : false,
@@ -613,7 +613,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -626,7 +626,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -639,7 +639,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -652,7 +652,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -665,7 +665,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -678,7 +678,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -691,7 +691,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -704,7 +704,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -716,8 +716,8 @@
         "columnName" : "AllowManualPayment",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -729,7 +729,7 @@
         "columnName" : "ManualPaymentPercent",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
+        "length" : 0,
         "precision" : 10,
         "generator" : "assigned",
         "isRelated" : false,
@@ -742,8 +742,8 @@
         "columnName" : "Active",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -756,7 +756,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 500,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -768,8 +768,8 @@
         "columnName" : "Logo",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 2147483647,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "scale" : 0
@@ -780,8 +780,8 @@
         "columnName" : "MondayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -793,8 +793,8 @@
         "columnName" : "TuesdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -806,8 +806,8 @@
         "columnName" : "WednesdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -819,8 +819,8 @@
         "columnName" : "ThursdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -832,8 +832,8 @@
         "columnName" : "FridayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -845,8 +845,8 @@
         "columnName" : "SaturdayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -858,8 +858,8 @@
         "columnName" : "SundayYN",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -872,7 +872,7 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 19,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -884,8 +884,8 @@
         "columnName" : "OpenTime",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 16,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -897,8 +897,8 @@
         "columnName" : "CloseTime",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 16,
-        "precision" : 19,
+        "length" : 0,
+        "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
