CXAdmin - ManageSubscriptions default date(read-only) Files modified - [ManageSubscriptions.js,EditForm.html,ManageSubscriptions.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -35,7 +35,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "startUpdate" : true,
+    "startUpdate" : false,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
     "transformationRequired" : false,
