--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -613,6 +613,7 @@
     "saveInPhonegap" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
+    "onSuccess" : "UpdateLogoMunicipalitiesonSuccess($event, $scope)",
     "inFlightBehavior" : "executeLast",
     "startUpdate" : false,
     "autoUpdate" : false,
