GIS-ContactsDB update New files added - [Giscontacts.java,GiscontactsDao.java,GiscontactsController.java,GiscontactsService.java,GiscontactsServiceImpl.java] Files modified - [GisrecordsService.java,cx2_published_dataModel.json,RolesController.java,States.java,MunicipalitiesController.java,StatesServiceImpl.java,GisrecordsServiceImpl.java,servicedef.xml,StatesController.java,GisrecordsController.java,StatesService.java,Gisrecords.java,Municipalities.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -104,6 +104,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "GISContacts",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
