GIS Additional Functionality - Edit Gis Record Page with contacts and map New files added - [favicon.ico,ng-map.min.js,EditGISRecord.css,Main.css,Main.html,app.css,EditGISRecord.js,config.json,app.js,EditGISRecord.html,Main.js,EditGISRecord.variables.json,index.html,project-rest-service.xml,en.json,Main.variables.json,googlemaps-prefab-services.xml,page.min.html,prefab-icon.png,googlemaps.jar,securityService.spring.xml,prefabPropertiesMetadata.json,.wmproject.properties,prefab-dispatcher-servlet.xml,app.variables.json,prefabProperties.properties] Files modified - [pages-config.json,ManageGISData.variables.json,ManageGISData.js,ManageGISData.html,app.variables.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -45,6 +45,13 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "EditGISRecord",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "GISRecordId",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "ForgotPassword",
   "type" : "PAGE",
   "params" : [ ]
