--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -176,6 +176,25 @@
     } ],
     "pageTransitions" : "none"
   },
+  "goToPage_EditGISRecord" : {
+    "_id" : "wm-goToPage_EditGISRecord-wm.NavigationVariable-1482818287961",
+    "name" : "goToPage_EditGISRecord",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "EditGISRecord",
+      "type" : "string"
+    } ],
+    "operation" : "gotoPage",
+    "pageName" : "EditGISRecord",
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "GISRecordId",
+      "value" : "bind:Widgets.grid3.selecteditem.id"
+    } ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ForgotPassword" : {
     "_id" : "wm-goToPage_ForgotPassword-wm.NavigationVariable-1479880545540",
     "name" : "goToPage_ForgotPassword",
