-User "ClosedForms" Page functionality Implementation -User "OpenForms" Page functionality Implementation New files added - [UserClosedForms.variables.json,UserOpenForms.js,UserClosedForms.css,UserOpenForms.variables.json,UserClosedForms.html,UserOpenForms.css,UserClosedForms.js,UserOpenForms.html,UserClosedForms,UserOpenForms] Files modified - [pages-config.json,Main.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -412,6 +412,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_UserClosedForms" : {
+    "_id" : "wm-goToPage_UserClosedForms-wm.NavigationVariable-1482831972576",
+    "name" : "goToPage_UserClosedForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "UserClosedForms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_UserCreation" : {
     "_id" : "wm-goToPage_UserCreation-wm.NavigationVariable-1478587383573",
     "name" : "goToPage_UserCreation",
@@ -420,6 +431,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "UserCreation",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_UserOpenForms" : {
+    "_id" : "wm-goToPage_UserOpenForms-wm.NavigationVariable-1482835065103",
+    "name" : "goToPage_UserOpenForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "UserOpenForms",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
