--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -190,7 +190,15 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserClosedForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserCreation",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "UserOpenForms",
   "type" : "PAGE",
   "params" : [ ]
 }, {
