Apply to Municipality- Error/success messages for three user cases Bug 649 partially fixed Files modified - [pages-config.json,CompanyProfile.html,CompanyMunicipalities.js,CompanyProfile.js,CompanyMunicipalities.html,CompanyProfile.variables.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -81,7 +81,11 @@
     "name" : "goToPage_CompanyMunicipalities",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "CompanyMunicipalities",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "CompanyMunicipalities",
     "dataSet" : [ ],
@@ -92,10 +96,18 @@
     "name" : "goToPage_CompanyProfile",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "CompanyProfile",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "CompanyProfile",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "companyID",
+      "value" : "bind:Widgets.selectSelectCompany.datavalue.ID | stringToNumber"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_CompanyUsers" : {
