Fees table Update New files added - [FeesService.java,FeesServiceImpl.java,Fees.java,FeesController.java,FeesDao.java] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,MunicipalitiesController.java,FormTypesService.java,UsersController.java,GisrecordsServiceImpl.java,servicedef.xml,Municipalities.java,MunicipalitiesServiceImpl.java,GisrecordsService.java,pages-config.json,FormTypesServiceImpl.java,Vendor.java,VendorService.java,States.java,FormTypesController.java,FormTypes.java,VendorController.java,StatesServiceImpl.java,Users.java,UsersService.java,StatesController.java,GisrecordsController.java,StatesService.java,Gisrecords.java,UsersServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json] Removed files - [FormFeeService.java,FormFeeDao.java,FormFeeServiceImpl.java,FormFee.java,FormFeeController.java]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -21,9 +21,6 @@
     "table" : "FormCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "FormFee",
-    "schema" : "cx2"
-  }, {
     "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
@@ -106,6 +103,9 @@
     "schema" : "cx2"
   }, {
     "table" : "VendorUsers",
+    "schema" : "cx2"
+  }, {
+    "table" : "Fees",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ ],
