--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -12,6 +12,15 @@
   "port" : "1433",
   "schemaName" : "cx2",
   "tableFilter" : [ {
+    "table" : "Fees",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormStatuses",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "FormCategories",
     "schema" : "cx2"
   }, {
@@ -21,22 +30,13 @@
     "table" : "FormCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "FormStatuses",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormTypes",
+    "table" : "GISContacts",
     "schema" : "cx2"
   }, {
     "table" : "GISRecords",
     "schema" : "cx2"
   }, {
-    "table" : "GISContacts",
-    "schema" : "cx2"
-  }, {
     "table" : "GlobalSettings",
-    "schema" : "cx2"
-  }, {
-    "table" : "MasterForms",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -45,13 +45,16 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
+    "table" : "MasterForms",
+    "schema" : "cx2"
+  }, {
     "table" : "MCNewElectricConnection",
     "schema" : "cx2"
   }, {
-    "table" : "Municipalities",
+    "table" : "MCNewResidentialStructure",
     "schema" : "cx2"
   }, {
-    "table" : "MCNewResidentialStructure",
+    "table" : "Municipalities",
     "schema" : "cx2"
   }, {
     "table" : "PUDApplication",
@@ -69,6 +72,9 @@
     "table" : "SFNewResidentialStructure",
     "schema" : "cx2"
   }, {
+    "table" : "Users",
+    "schema" : "cx2"
+  }, {
     "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
@@ -78,16 +84,13 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
-    "table" : "Vendor",
-    "schema" : "cx2"
-  }, {
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "UserSubscriptions",
+    "schema" : "cx2"
+  }, {
+    "table" : "Vendor",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
@@ -105,7 +108,13 @@
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
-    "table" : "Fees",
+    "table" : "MasterInspections",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterCases",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterProjects",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ ],
